fix calculation of expected total time and in vehicle time to consider chained parts